--- a/src/tn/esprit/gui/pages/PageViewReclamModerator.fxml
+++ b/src/tn/esprit/gui/pages/PageViewReclamModerator.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="447.0" prefWidth="712.0" style="-fx-background-color: #2C3A47;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" prefHeight="447.0" prefWidth="712.0" style="-fx-background-color: #2C3A47;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox layoutX="93.0" layoutY="340.0" prefHeight="32.0" prefWidth="572.0" spacing="50.0">
          <children>
@@ -24,7 +23,7 @@
             <Image url="@../../../../resources/images/defaultcompany.jpg" />
          </image>
       </ImageView>
-      <TitledPane animated="false" layoutX="248.0" layoutY="14.0" prefHeight="294.0" prefWidth="337.0" text="Comments">
+      <TitledPane animated="false" layoutX="248.0" layoutY="14.0" prefHeight="294.0" prefWidth="417.0" text="Comments">
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="262.0" prefWidth="402.0" />
          </content>
