--- a/src/HabibGuitest/searchJob.fxml
+++ b/src/HabibGuitest/searchJob.fxml
@@ -1,53 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitMenuButton?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.Region?>
 
-<AnchorPane id="AnchorPane" prefHeight="158.0" prefWidth="872.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<HBox alignment="CENTER_LEFT" prefHeight="51.0" style="-fx-background-color: #3B4558;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox alignment="CENTER" layoutX="39.0" layoutY="24.0" mouseTransparent="true" prefHeight="53.0" prefWidth="823.0" spacing="30.0" style="-fx-background-color: #3B4558;" stylesheets="@../resources/css/theme.css">
-         <children>
-            <Label prefHeight="21.0" prefWidth="80.0" text="Sort by :" textFill="#b8b1b1">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Label>
-            <MenuButton mnemonicParsing="false" prefHeight="32.0" prefWidth="73.0">
-              <items>
-                  <MenuItem mnemonicParsing="false" text="Category" />
-                  <MenuItem mnemonicParsing="false" text="Salary" />
-                  <MenuItem mnemonicParsing="false" text="Location" />
-                <MenuItem mnemonicParsing="false" text="Company " />
-                <MenuItem mnemonicParsing="false" text="Creation date" />
-              </items>
-            </MenuButton>
-            <Label prefHeight="36.0" prefWidth="84.0" stylesheets="@../resources/css/theme.css" text="Search by :" textFill="#b8b1b1">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Label>
-            <SplitMenuButton mnemonicParsing="false" prefHeight="32.0" prefWidth="73.0">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Company " />
-                  <MenuItem mnemonicParsing="false" text="Category" />
-                <MenuItem mnemonicParsing="false" text="Location" />
-              </items>
-            </SplitMenuButton>
-            <TextField prefWidth="104.0" />
-            <Button mnemonicParsing="false" prefHeight="32.0" prefWidth="70.0" styleClass="primary" stylesheets="@../resources/css/theme.css" text="Search" textFill="#b8b1b1">
-               <font>
-                  <Font size="19.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="32.0" prefWidth="70.0" styleClass="success" stylesheets="@../resources/css/theme.css" text="Create" />
-         </children>
-      </HBox>
+      <MenuButton mnemonicParsing="false" prefHeight="0.0" prefWidth="114.0" text="Sort by">
+         <items>
+            <MenuItem mnemonicParsing="false" text="Category" />
+            <MenuItem mnemonicParsing="false" text="Salary" />
+            <MenuItem mnemonicParsing="false" text="Location" />
+            <MenuItem mnemonicParsing="false" text="Company " />
+            <MenuItem mnemonicParsing="false" text="Creation date" />
+         </items>
+      </MenuButton>
+      <Region prefHeight="32.0" prefWidth="34.0" />
+      <MenuButton mnemonicParsing="false" prefHeight="0.0" prefWidth="114.0" text="Search By">
+         <items>
+            <MenuItem mnemonicParsing="false" text="Category" />
+            <MenuItem mnemonicParsing="false" text="Salary" />
+            <MenuItem mnemonicParsing="false" text="Location" />
+            <MenuItem mnemonicParsing="false" text="Company " />
+            <MenuItem mnemonicParsing="false" text="Creation date" />
+         </items>
+      </MenuButton>
+      <Region prefHeight="32.0" prefWidth="34.0" />
+      <TextField prefHeight="26.0" prefWidth="143.0" promptText="Search" />
+      <Region prefHeight="26.0" prefWidth="117.0" />
+      <Button mnemonicParsing="false" prefHeight="0.0" prefWidth="50.0" text="Create" />
    </children>
-</AnchorPane>
+</HBox>
