added the motivation letter (textareaà in te detail view

--- a/src/tarekGUItest/details.fxml
+++ b/src/tarekGUItest/details.fxml
@@ -2,6 +2,7 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -23,9 +24,9 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <AnchorPane layoutX="16.0" layoutY="103.0" prefHeight="504.0" prefWidth="736.0" style="-fx-background-color: E7E7E7; -fx-background-radius: 10;">
+      <AnchorPane layoutX="11.0" layoutY="103.0" prefHeight="510.0" prefWidth="713.0" style="-fx-background-color: E7E7E7; -fx-background-radius: 10;">
          <children>
-            <TilePane layoutX="14.0" layoutY="10.0" prefColumns="2" prefHeight="472.0" prefWidth="688.0" tileAlignment="TOP_LEFT">
+            <TilePane layoutX="8.0" layoutY="10.0" prefColumns="2" prefHeight="372.0" prefWidth="689.0" tileAlignment="TOP_LEFT">
                <children>
                   <ImageView fitHeight="41.0" fitWidth="51.0">
                      <image>
@@ -109,6 +110,12 @@
                   </Label>
                </children>
             </TilePane>
+            <TextArea layoutX="154.0" layoutY="382.0" prefHeight="112.0" prefWidth="543.0" style="-fx-border-radius: 10;" />
+            <Label layoutY="382.0" prefHeight="27.0" prefWidth="149.0" text="Motivation Letter :">
+               <font>
+                  <Font name="Franklin Gothic Medium" size="18.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
