--- a/src/tn/esprit/gui/pages/Abonnement.fxml
+++ b/src/tn/esprit/gui/pages/Abonnement.fxml
@@ -3,31 +3,54 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="377.0" prefWidth="480.0" style="-fx-background-color: #34495e;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="263.0" prefWidth="545.0" style="-fx-background-color: #34495e;" stylesheets="@../../../../resources/css/theme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="58.0" layoutY="262.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="115.0" styleClass="primary" stylesheets="@../../../../resources/css/theme.css" text="Statistique" textFill="#5b5050" />
-      <CheckBox layoutX="67.0" layoutY="313.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="97.0" styleClass="check" stylesheets="@../../../../resources/css/theme.css" text="Notify Sms" textFill="#ffffffd9" />
-      <Label layoutX="40.0" layoutY="20.0" prefHeight="32.0" prefWidth="115.0" text="Name" textFill="#fffffff2" />
-      <Label layoutX="186.0" layoutY="185.0" prefHeight="43.0" prefWidth="258.0" style="-fx-background-color: white;" text="Entrepreneur" />
-      <Button layoutX="253.0" layoutY="262.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="124.0" styleClass="danger" stylesheets="@../../../../resources/css/theme.css" text="Désabonner">
+      <Button layoutX="465.0" layoutY="255.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="124.0" styleClass="danger" stylesheets="@../../../../resources/css/theme.css" text="Désabonner">
          <font>
             <Font size="15.0" />
          </font>
       </Button>
-      <Button layoutX="253.0" layoutY="314.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="124.0" styleClass="danger" stylesheets="@../../../../resources/css/theme.css" text="Details">
+      <Button layoutX="465.0" layoutY="306.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="124.0" styleClass="danger" text="Details">
          <font>
             <Font size="15.0" />
          </font>
       </Button>
-      <Label layoutX="186.0" layoutY="125.0" prefHeight="43.0" prefWidth="258.0" style="-fx-background-color: white;" text="52386&amp;é&quot;é&amp;&quot;é&amp;2" />
-      <Label layoutX="186.0" layoutY="67.0" prefHeight="43.0" prefWidth="258.0" style="-fx-background-color: white;" text="13 rue patati patta" />
-      <Label layoutX="186.0" layoutY="15.0" prefHeight="43.0" prefWidth="258.0" style="-fx-background-color: white;" text="Alai" />
-      <Label layoutX="40.0" layoutY="73.0" prefHeight="32.0" prefWidth="115.0" text="Adresse" textFill="#fffffff2" />
-      <Label layoutX="40.0" layoutY="130.0" prefHeight="32.0" prefWidth="115.0" text="Number" textFill="#fffffff2" />
-      <Label layoutX="40.0" layoutY="191.0" prefHeight="32.0" prefWidth="115.0" text="Domaine" textFill="#fffffff2" />
+      <TilePane layoutX="301.0" layoutY="22.0" prefHeight="248.0" prefWidth="327.0">
+         <children>
+            <TitledPane animated="false" prefHeight="225.0" prefWidth="318.0" text="Description">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="207.0" prefWidth="351.0" />
+               </content>
+            </TitledPane>
+         </children>
+      </TilePane>
+      <Pane layoutX="14.0" layoutY="106.0" prefHeight="200.0" prefWidth="254.0">
+         <children>
+            <Label layoutX="94.0" layoutY="123.0" prefHeight="24.0" prefWidth="186.0" text="companydomaine" textFill="#d7caca" />
+            <Label layoutY="116.0" prefHeight="32.0" prefWidth="115.0" text="Domaine :" textFill="#fffffff2" />
+            <Label layoutX="94.0" layoutY="91.0" prefHeight="24.0" prefWidth="186.0" text="companyNumber" textFill="#d7caca" />
+            <Label layoutY="84.0" prefHeight="32.0" prefWidth="115.0" text="Number  :" textFill="#fffffff2" />
+            <Label layoutX="94.0" layoutY="56.0" prefHeight="24.0" prefWidth="200.0" text="companyAdresse" textFill="#d7caca" />
+            <Label layoutY="49.0" prefHeight="32.0" prefWidth="115.0" text="Adresse :" textFill="#fffffff2" />
+            <Label layoutY="13.0" prefHeight="32.0" prefWidth="115.0" text="Name     :" textFill="#fffffff2" />
+            <Label layoutX="100.0" layoutY="20.0" prefHeight="24.0" prefWidth="200.0" text="companyName" textFill="#d7caca" />
+            <CheckBox layoutX="23.0" layoutY="160.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="97.0" styleClass="check" stylesheets="@../../../../resources/css/theme.css" text="Notify Sms" textFill="#ffffffd9" />
+         </children>
+      </Pane>
+      <ImageView fitHeight="117.0" fitWidth="115.0">
+         <image>
+            <Image url="@../../../../resources/images/heart_14746.png" />
+         </image>
+      </ImageView>
+      <CheckBox layoutX="36.0" layoutY="309.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="97.0" styleClass="check" stylesheets="@../../../../resources/css/theme.css" text="Notify Mail" textFill="#ffffffd9" />
+      <Button graphicTextGap="3.0" layoutX="313.0" layoutY="258.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="50.0" prefWidth="115.0" styleClass="primary" stylesheets="@../../../../resources/css/theme.css" text="Statistique" textFill="#5b5050" />
    </children>
 </AnchorPane>
