--- a/src/tarekGUItest/details.fxml
+++ b/src/tarekGUItest/details.fxml
@@ -2,12 +2,13 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.web.WebView?>
 
 <AnchorPane id="AnchorPane" prefHeight="628.0" prefWidth="736.0" style="-fx-background-color: #192a56;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
@@ -110,12 +111,20 @@
                   </Label>
                </children>
             </TilePane>
-            <TextArea layoutX="154.0" layoutY="382.0" prefHeight="112.0" prefWidth="543.0" style="-fx-border-radius: 10;" />
-            <Label layoutY="382.0" prefHeight="27.0" prefWidth="149.0" text="Motivation Letter :">
+            <Label layoutX="8.0" layoutY="382.0" prefHeight="27.0" prefWidth="141.0" text="Motivation Letter :">
                <font>
                   <Font name="Franklin Gothic Medium" size="18.0" />
                </font>
             </Label>
+            <ScrollPane layoutX="165.0" layoutY="377.0" prefHeight="125.0" prefWidth="536.0">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <WebView layoutX="6.0" layoutY="6.0" prefHeight="113.0" prefWidth="510.0" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </ScrollPane>
          </children>
       </AnchorPane>
    </children>
