--- a/src/tn/esprit/gui/pages/PageViewReclamModerator.fxml
+++ b/src/tn/esprit/gui/pages/PageViewReclamModerator.fxml
@@ -2,30 +2,30 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="447.0" prefWidth="712.0" style="-fx-background-color: #2C3A47;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" prefHeight="701.0" prefWidth="986.0" style="-fx-background-color: #2C3A47;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox layoutX="93.0" layoutY="340.0" prefHeight="32.0" prefWidth="572.0" spacing="50.0">
-         <children>
-            <Button mnemonicParsing="false" prefHeight="32.0" prefWidth="141.0" styleClass="warning" stylesheets="@../../../../resources/css/theme.css" text="Remove Comment" />
-            <Button mnemonicParsing="false" prefHeight="32.0" prefWidth="118.0" styleClass="primary" stylesheets="@../../../../resources/css/theme.css" text="DisableJob" />
-            <Button mnemonicParsing="false" prefHeight="32.0" prefWidth="101.0" styleClass="primary" stylesheets="@../../../../resources/css/theme.css" text="Reject" />
-            <Button mnemonicParsing="false" prefHeight="32.0" prefWidth="171.0" styleClass="danger" stylesheets="@../../../../resources/css/theme.css" text="Redirect" />
-         </children>
-      </HBox>
       <ImageView fitHeight="87.0" fitWidth="129.0" layoutX="116.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../resources/images/defaultcompany.jpg" />
          </image>
       </ImageView>
-      <TitledPane animated="false" layoutX="248.0" layoutY="14.0" prefHeight="294.0" prefWidth="417.0" text="Comments">
+      <TitledPane animated="false" layoutX="248.0" layoutY="14.0" prefHeight="294.0" prefWidth="711.0" text="Comments">
          <content>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="262.0" prefWidth="402.0" />
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="262.0" prefWidth="402.0">
+               <children>
+                  <ScrollPane prefHeight="263.0" prefWidth="711.0">
+                     <content>
+                        <VBox prefHeight="474.0" prefWidth="689.0" />
+                     </content>
+                  </ScrollPane>
+               </children></AnchorPane>
          </content>
       </TitledPane>
       <Label layoutX="23.0" layoutY="132.0" text="Status" textFill="#d7caca" />
@@ -36,5 +36,10 @@
       <Label layoutX="123.0" layoutY="209.0" text="recruiterName" textFill="#d7caca" />
       <Label layoutX="25.0" layoutY="253.0" text="Title" textFill="#d7caca" />
       <Label layoutX="123.0" layoutY="253.0" text="JobTitle" textFill="#d7caca" />
+      <Button layoutX="506.0" layoutY="619.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="171.0" styleClass="danger" stylesheets="@../../../../resources/css/theme.css" text="DisableJob" />
+      <Button layoutX="281.0" layoutY="619.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="171.0" styleClass="success" stylesheets="@../../../../resources/css/theme.css" text="Reject" />
+      <Button layoutX="769.0" layoutY="550.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="144.0" text="SendMail" />
+      <Button layoutX="506.0" layoutY="550.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="171.0" styleClass="danger" stylesheets="@../../../../resources/css/theme.css" text="RemoveComment" />
+      <Button layoutX="281.0" layoutY="549.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="171.0" styleClass="primary" stylesheets="@../../../../resources/css/theme.css" text="Redirect" />
    </children>
 </AnchorPane>
