--- a/src/resources/css/stylesheet.css
+++ b/src/resources/css/stylesheet.css
@@ -28,3 +28,21 @@ and open the template in the editor.
 .sidebar-user-icon{
     -fx-fill: #b8b1b1;
 }
+
+.chart-pie-label-line {
+    -fx-stroke: #8b4513;
+    -fx-fill: #8b4513;
+}
+
+.chart-pie-label { /*this is what you need for labels*/
+    -fx-fill: #FFF;
+    -fx-font-size: 1em;
+} 
+.chart-legend {
+   -fx-background-color:  #fafad2;
+   -fx-stroke: #daa520;
+}
+.chart-title {
+  -fx-text-fill: #FFF;
+  -fx-font-size: 1.6em;
+}
