--- a/src/tn/esprit/gui/pages/PageViewReclamModerator.fxml
+++ b/src/tn/esprit/gui/pages/PageViewReclamModerator.fxml
@@ -20,7 +20,7 @@
          <content>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="262.0" prefWidth="402.0">
                <children>
-                  <ScrollPane prefHeight="263.0" prefWidth="711.0">
+                  <ScrollPane layoutX="-1.0" layoutY="7.0" prefHeight="263.0" prefWidth="711.0">
                      <content>
                         <VBox prefHeight="474.0" prefWidth="689.0" />
                      </content>
@@ -38,7 +38,6 @@
       <Label layoutX="123.0" layoutY="253.0" text="JobTitle" textFill="#d7caca" />
       <Button layoutX="506.0" layoutY="619.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="171.0" styleClass="danger" stylesheets="@../../../../resources/css/theme.css" text="DisableJob" />
       <Button layoutX="281.0" layoutY="619.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="171.0" styleClass="success" stylesheets="@../../../../resources/css/theme.css" text="Reject" />
-      <Button layoutX="769.0" layoutY="550.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="144.0" text="SendMail" />
       <Button layoutX="506.0" layoutY="550.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="171.0" styleClass="danger" stylesheets="@../../../../resources/css/theme.css" text="RemoveComment" />
       <Button layoutX="281.0" layoutY="549.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="171.0" styleClass="primary" stylesheets="@../../../../resources/css/theme.css" text="Redirect" />
    </children>
