--- a/src/tn/esprit/gui/pages/PageViewReclamModerator.fxml
+++ b/src/tn/esprit/gui/pages/PageViewReclamModerator.fxml
@@ -2,43 +2,50 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="701.0" prefWidth="986.0" style="-fx-background-color: #2C3A47;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" prefHeight="701.0" prefWidth="986.0" style="-fx-background-color: #2C3A47;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="87.0" fitWidth="129.0" layoutX="116.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="209.0" fitWidth="269.0" layoutX="24.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../resources/images/defaultcompany.jpg" />
          </image>
       </ImageView>
-      <TitledPane animated="false" layoutX="248.0" layoutY="14.0" prefHeight="294.0" prefWidth="711.0" text="Comments">
-         <content>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="262.0" prefWidth="402.0">
-               <children>
-                  <ScrollPane layoutX="-1.0" layoutY="7.0" prefHeight="263.0" prefWidth="711.0">
-                     <content>
-                        <VBox prefHeight="474.0" prefWidth="689.0" />
-                     </content>
-                  </ScrollPane>
-               </children></AnchorPane>
-         </content>
-      </TitledPane>
-      <Label layoutX="23.0" layoutY="132.0" text="Status" textFill="#d7caca" />
-      <Label layoutX="123.0" layoutY="132.0" text="OPEN" textFill="#d7caca" />
-      <Label layoutX="23.0" layoutY="169.0" text="Company" textFill="#d7caca" />
-      <Label layoutX="123.0" layoutY="169.0" text="companyName" textFill="#d7caca" />
-      <Label layoutX="25.0" layoutY="209.0" text="Recruiter" textFill="#d7caca" />
-      <Label layoutX="123.0" layoutY="209.0" text="recruiterName" textFill="#d7caca" />
-      <Label layoutX="25.0" layoutY="253.0" text="Title" textFill="#d7caca" />
-      <Label layoutX="123.0" layoutY="253.0" text="JobTitle" textFill="#d7caca" />
+      <Label layoutX="529.0" layoutY="27.0" prefHeight="94.0" prefWidth="398.0" text="Status: OPEN" textFill="#d7caca">
+         <font>
+            <Font size="53.0" />
+         </font></Label>
       <Button layoutX="506.0" layoutY="619.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="171.0" styleClass="danger" stylesheets="@../../../../resources/css/theme.css" text="DisableJob" />
       <Button layoutX="281.0" layoutY="619.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="171.0" styleClass="success" stylesheets="@../../../../resources/css/theme.css" text="Reject" />
       <Button layoutX="506.0" layoutY="550.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="171.0" styleClass="danger" stylesheets="@../../../../resources/css/theme.css" text="RemoveComment" />
       <Button layoutX="281.0" layoutY="549.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="171.0" styleClass="primary" stylesheets="@../../../../resources/css/theme.css" text="Redirect" />
+      <Label layoutX="330.0" layoutY="99.0" prefHeight="22.0" prefWidth="398.0" text="Job: Job Title" textFill="#d7caca">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Label>
+      <Label layoutX="330.0" layoutY="150.0" prefHeight="22.0" prefWidth="398.0" text="Company: CompanyName" textFill="#d7caca">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Label>
+      <Label layoutX="53.0" layoutY="248.0" prefHeight="22.0" prefWidth="398.0" text="Reclamation Type: TYPE" textFill="#d7caca">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Label>
+      <Label layoutX="53.0" layoutY="295.0" prefHeight="40.0" prefWidth="833.0" text="Reclamation Description : DESC" textFill="#d7caca">
+         <font>
+            <Font size="28.0" />
+         </font>
+      </Label>
+      <Label layoutX="330.0" layoutY="190.0" prefHeight="22.0" prefWidth="398.0" text="Recruiter: recruiterName" textFill="#d7caca">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
